--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -15,7 +15,7 @@ header {
 
 #menu ul {
     display: flex;
-    margin-top: 3px;
+    margin-top: 1vh;
     margin-bottom: 3px;   
     padding-left: 0;
     margin-left: 0;
@@ -32,7 +32,7 @@ header {
     display: flex;
     flex-direction: column;
     right: 1em;
-    top: 6em;
+    top: 15vh;
 }
 
 .container {
